--- a/Activity0/src/views/MainMenu.form
+++ b/Activity0/src/views/MainMenu.form
@@ -19,7 +19,7 @@
           <text value="What would you like to search within the file?"/>
         </properties>
       </component>
-      <component id="9a9cd" class="javax.swing.JComboBox" binding="dropdown" custom-create="true" default-binding="true">
+      <component id="9a9cd" class="javax.swing.JComboBox" binding="M_dropdown" custom-create="true" default-binding="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.5"/>
