--- a/Activity0/src/views/AthletesPanel.form
+++ b/Activity0/src/views/AthletesPanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.PlayerInformationPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.AthletesPanel">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="630" height="460"/>
@@ -20,7 +20,7 @@
           <text value="Player Information (Family Name)"/>
         </properties>
       </component>
-      <component id="cec5e" class="javax.swing.JComboBox" binding="PI_dropdown">
+      <component id="cec5e" class="javax.swing.JComboBox" binding="PI_dropdown" custom-create="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
@@ -28,7 +28,7 @@
         <properties>
           <background color="-2500135"/>
           <foreground color="-16777216"/>
-          <preferredSize width="300" height="30"/>
+          <preferredSize width="500" height="30"/>
         </properties>
       </component>
       <component id="b9aa5" class="javax.swing.JButton" binding="PI_backbtn">
