--- a/Activity0/src/views/NameResultPanel.form
+++ b/Activity0/src/views/NameResultPanel.form
@@ -1,74 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.NameResultPanel">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="918" height="400"/>
+      <xy x="20" y="20" width="552" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1"/>
+    </properties>
     <border type="none"/>
     <children>
-      <grid id="26dcc" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="15" right="10"/>
+      <component id="10c1b" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="5" height="-1"/>
-            <maximum-size width="5" height="-1"/>
-          </grid>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <alignmentX value="0.0"/>
-          <alignmentY value="0.0"/>
-          <background color="-1"/>
+          <foreground color="-16777216"/>
+          <text value="There are  several athletes under this name,"/>
         </properties>
-        <border type="line"/>
-        <children>
-          <component id="196ea" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-12829636"/>
-              <text value="There are several atheletes under this name, please choose the athelete below spefically"/>
-            </properties>
-          </component>
-          <component id="dc54d" class="javax.swing.JComboBox" binding="NR_dropdown" custom-create="true">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="1" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="0" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <alignmentX value="0.0"/>
-              <alignmentY value="0.0"/>
-              <autoscrolls value="false"/>
-              <background color="-1"/>
-              <editable value="true"/>
-              <inheritsPopupMenu value="false"/>
-              <model>
-                <item value="-"/>
-                <item value="Agustin, Mark Lestat"/>
-                <item value="Domingo, Lenar"/>
-                <item value="Luis, Marven"/>
-                <item value="Morados, Lou Diamond"/>
-                <item value="Nuarin, Georcellle"/>
-                <item value="Rabang, Gebreyl"/>
-                <item value="----------------------------------------------------------"/>
-              </model>
-              <opaque value="false"/>
-            </properties>
-          </component>
-          <component id="baddc" class="javax.swing.JButton" binding="NR_backbutton">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="1" indent="80" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <alignmentY value="0.5"/>
-              <text value="Back"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
+      </component>
+      <component id="8000c" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <foreground color="-16777216"/>
+          <text value="please choose the athlete below specifically"/>
+        </properties>
+      </component>
+      <component id="2858" class="javax.swing.JComboBox" binding="NR_dropdown">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <background color="-1"/>
+          <editable value="false"/>
+        </properties>
+      </component>
+      <component id="28feb" class="javax.swing.JButton" binding="NR_bckbtn">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <background color="-1"/>
+          <text value="Back"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
