--- a/Activity0/src/views/NameResultFoundPanel.form
+++ b/Activity0/src/views/NameResultFoundPanel.form
@@ -90,7 +90,7 @@
           <text value="ID"/>
         </properties>
       </component>
-      <component id="36110" class="javax.swing.JButton" binding="backButton" default-binding="true">
+      <component id="36110" class="javax.swing.JButton" binding="NRF_bckbtn">
         <constraints>
           <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
