--- a/Activity0/src/views/CountryParticipationPanel.form
+++ b/Activity0/src/views/CountryParticipationPanel.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="96347" class="javax.swing.JComboBox" binding="CP_dropdown">
+      <component id="96347" class="javax.swing.JComboBox" binding="CP_dropdown" custom-create="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
