--- a/Activity0/src/views/CountryResultPanel.form
+++ b/Activity0/src/views/CountryResultPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.CountryResultPanel">
-  <grid id="27dc6" layout-manager="GridBagLayout">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="565" height="400"/>
     </constraints>
@@ -16,7 +16,7 @@
         </constraints>
         <properties>
           <foreground color="-16777216"/>
-          <text value="Total Sports Participated in"/>
+          <text value="Total Sports Participated"/>
         </properties>
       </component>
       <component id="5a615" class="javax.swing.JLabel">
@@ -29,33 +29,33 @@
           <text value="Results Found"/>
         </properties>
       </component>
-      <component id="a1325" class="javax.swing.JLabel">
+      <component id="a1325" class="javax.swing.JLabel" binding="countryLabel">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="50" bottom="0" right="50" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <foreground color="-16777216"/>
-          <text value="Null"/>
+          <text value="Country"/>
         </properties>
       </component>
-      <component id="fb1c7" class="javax.swing.JLabel">
+      <component id="fb1c7" class="javax.swing.JLabel" binding="countryValue">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="50" bottom="0" right="50" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <foreground color="-16777216"/>
-          <text value="Null"/>
+          <text value="0"/>
         </properties>
       </component>
-      <component id="a2dc1" class="javax.swing.JButton" binding="CR_bckbtn">
+      <component id="a2dc1" class="javax.swing.JButton" binding="CR_backbtn">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <background color="-1"/>
+          <background color="-2500135"/>
           <text value="Back"/>
         </properties>
       </component>
