--- a/Activity0/src/views/SportsCategoryPanel.form
+++ b/Activity0/src/views/SportsCategoryPanel.form
@@ -20,7 +20,7 @@
           <text value="Sports Category"/>
         </properties>
       </component>
-      <component id="2cbbf" class="javax.swing.JComboBox" binding="SC_dropdown">
+      <component id="2cbbf" class="javax.swing.JComboBox" binding="SC_dropdown" custom-create="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
