--- a/Activity0/src/views/MedalMetricsPanel.form
+++ b/Activity0/src/views/MedalMetricsPanel.form
@@ -40,6 +40,16 @@
           <text value="Results Found"/>
         </properties>
       </component>
+      <component id="5b0c" class="javax.swing.JButton" binding="MM_backbtn">
+        <constraints>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <background color="-2500135"/>
+          <text value="Back"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
