--- a/Activity0/src/views/PlayerMetricsPanel.form
+++ b/Activity0/src/views/PlayerMetricsPanel.form
@@ -139,6 +139,16 @@
           <text value="0"/>
         </properties>
       </component>
+      <component id="8172d" class="javax.swing.JButton" binding="PM_backbtn">
+        <constraints>
+          <grid row="2" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <background color="-2500135"/>
+          <text value="Back"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
