--- a/Activity0/src/views/AthletesPanel.form
+++ b/Activity0/src/views/AthletesPanel.form
@@ -9,7 +9,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="d3699" class="javax.swing.JLabel">
+      <component id="d3699" class="javax.swing.JLabel" binding="athleteLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="0" bottom="50" right="0" weightx="0.0" weighty="0.0"/>
